# mc-artifact-parser

./: .gitignore  README.md  WALKTHROUGH_RUNBOOK.md  pyproject.toml
docx_schema/: DISTRIBUTION.md  RUNBOOK.md  __init__.py  __main__.py  cli.py  docx_reader.py  mapping.py  models.py  schema.py
docx_schema/sources/: __init__.py  docx.py  text_columns.py
mc_artifact_parser/: __init__.py  __main__.py  agent_workflow.py  cli.py  models.py  parser.py  workbench.py
mc_artifact_parser/adapters/: base.py  column_parsing.py  docx.py  image.py  markdown.py  schema_text.py
mc_artifact_parser/outputs/: __init__.py  base.py  data_dictionary.py  formatting.py  mappings.py  mermaid_erd.py  open_questions.py  session_mapping.py  source_review.py  table_schema_markdown.py
schema_parser/: DISTRIBUTION.md  RUNBOOK.md  __init__.py  __main__.py  cli.py  mapping.py  models.py  render.py
schema_parser/sources/: __init__.py  base.py  docx.py  svg.py  svg_relationships.py  svg_tables.py  text.py  text_columns.py
tests/: test_agent_workflow.py  test_cli.py  test_docx_adapter.py  test_docx_schema.py  test_image_adapter.py  test_markdown_adapter.py  test_outputs.py  test_schema_parser.py  test_unity_catalog.py  test_workbench.py
